--- a/SCC0201_ICC2/T4/Makefile
+++ b/SCC0201_ICC2/T4/Makefile
@@ -1,6 +1,6 @@
 all:
 	gcc src/*.c -I include/ -o main -g -Wall -lm -std=c99
 run:
-	./main < cases/1.in
+	./main
 debug:
 	valgrind -v --leak-check=full --track-origins=yes --show-leak-kinds=all ./main
