--- a/SCC0215_Arquivos/T2/.vscode/settings.json
+++ b/SCC0215_Arquivos/T2/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "register.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "stdio.h": "c"
     }
 }
