--- a/SCC0221_ICC1/019/Makefile
+++ b/SCC0221_ICC1/019/Makefile
@@ -1,3 +1,13 @@
 all:
-	./Luana < casos/$(f).in > out
+	gcc $(f).c -o main -Wall -g
+
+
+test:
+	./main < casos/$(f).in > out
 	diff -w out casos/$(f).out
+
+run:
+	./main < casos/$(f).in
+
+valgrind:
+	valgrind -v --leak-check=full ./main < casos/$(f).in
