--- a/SCC0221_ICC1/019/T3/Correcao/Makefile
+++ b/SCC0221_ICC1/019/T3/Correcao/Makefile
@@ -1,5 +1,5 @@
 all:
-	gcc $(f).c -o main -Wall -std=c99 -g
+	gcc $(f).c -o main -Wall -std=c99 -g -lm
 
 run:
 	./main < casos/$(f).in
@@ -9,4 +9,7 @@ test:
 	diff -w out casos/$(f).out
 
 valgrind:
-	valgrind -v --leak-check=full ./main < $(f).in
+	valgrind -v --leak-check=full ./main < casos/$(f).in > out
+
+copy:
+	mv ../../../../../../Downloads/*.c ./
